--- a/src/app/components/add-libro/add-libro.component.html
+++ b/src/app/components/add-libro/add-libro.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="submit-form">
-    <div *ngIf="!">
+    <div *ngIf="!submitted">
         <div class="form-group">
         <label for="nombre">Nombre</label>
         <input
